[package]
name = "bevy_nannou_pixelmap"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0-rc.3"
crossbeam-channel = "0.5.13"
socket2 = { version = "0.5.7", features = ["all"] }
bytemuck = "1"
bevy_mod_picking = { version = "0.20.0-rc.0", default-features = false, features = [
    "backend_raycast",
    "selection",
] }
sacn = { git = "https://github.com/tychedelia/sacn", branch = "main" }

[[example]]
name = "test"
path = "examples/test.rs"

[dev-dependencies]
nannou = { git = "https://github.com/tychedelia/nannou", branch = "955-abstract-the-nannoudraw-module-into-the-new-bevy_nannou_draw-crate-1-material" }